# approvals_live_demo

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt  setup_for_demo.sh
01BeforeApprovals/: CMakeLists.txt
01HelloApprovals/: CMakeLists.txt  first_test.cpp
02HelloApprovals/: CMakeLists.txt  first_test.cpp
02Reporters/: CMakeLists.txt  PNGViewingReporter.cpp  PNGViewingReporter.h  SVGReporter.cpp  SVGReporter.h  svg_test.cpp
CMake/: CodeCoverage.cmake
GildedRose/: CMakeLists.txt  GildedRose.h  GildedRoseApprovals.cpp  GildedRoseTest.cpp
GildedRose/tests/: GildedRoseApprovals.cpp
SVGFiles/: CMakeLists.txt  main.cpp
demos/: CMakeLists.txt
demos/01HelloApprovals/: CMakeLists.txt  HelloApprovalsTests.cpp  HelloApprovalsTests.helloPoetry.approved.txt  README.md  first_test.cpp
demos/02GildedRose/: .gitignore  README.md
demos/02GildedRose/tests/: GildedRoseApprovals.cpp
demos/02GildedRose/tests/approval_tests/: GildedRoseApprovals.VerifyCombinations.approved.txt  GildedRoseApprovals.VerifyMoreCombinations.approved.txt
demos/03LogFiles/: README.md  main.cpp  test_class_with_logging.cpp
demos/04SVGFiles/: README.md  SVGReporter.cpp  svg_test.cpp
demos/05QTableWidget/: CMakeLists.txt  ImageTest.cpp
demos/05QtWidgets/: CMakeLists.txt  QImageExamples.cpp  QTableWidgetExamples.cpp  README.md  TableWidgetTextTest.cpp  WidgetsTest.cpp
demos/06QImage/: ImageTest.cpp  README.md
demos/GildedRose/: CMakeLists.txt  README.md
demos/GildedRose/lib/: GildedRose.cc  GildedRose.h
demos/GildedRose/tests/: GildedRoseApprovals.cpp  GildedRoseTest.cpp
demos/GildedRose/tests/detailed_tests/: GildedRoseApprovalsAllSteps.cpp
demos/HelloApprovals/: README.md  first_test.cpp
demos/LogFiles/: CMakeLists.txt  test_class_with_logging.cpp
demos/SVGFiles/: CMakeLists.txt  README.md  SVGReporter.cpp  SVGReporter.h  main.cpp  svg_test.cpp
preparation/: preparation.md
shared_code/: CMakeLists.txt  ComplexOperation.cpp  ComplexOperation.h  DateUtilities.cpp  DateUtilities.h  Drawing.cpp  Drawing.h  FileUtilities.cpp  FileUtilities.h  HelloApprovals.cpp  HelloApprovals.h  Logger.cpp  Logger.h  SVGDrawing.cpp  SVGDrawing.h  StringUtilities.cpp  StringUtilities.h
